--- a/.github/workflows/docker-main.yml
+++ b/.github/workflows/docker-main.yml
@@ -2,9 +2,9 @@ name: Build Latest
 
 on:
   push:
-    # Publish `master` as Docker `latest` image.
+    # Publish `main` as Docker `latest` image.
     branches:
-      - master
+      - main
 
 jobs:
   # Push image to GitHub Packages.
